--- a/Exam Score Prediction/Exam_Score_Prediction.ipynb
+++ b/Exam Score Prediction/Exam_Score_Prediction.ipynb
@@ -4,24 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Neural Networks - Programming Assignment\n",
-    "## Comparing Linear Models and Multi-Layer Perceptrons\n",
-    "\n",
-    "**Student Name:** Anugrah Kumar  \n",
-    "**Student ID:** 2025AA05470 \n",
-    "**Date:** 09/12/2025\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## ⚠️ IMPORTANT INSTRUCTIONS\n",
-    "\n",
-    "1. **Complete ALL sections** marked with `TODO`\n",
-    "2. **DO NOT modify** the `get_assignment_results()` function structure\n",
-    "3. **Fill in all values accurately** - these will be auto-verified\n",
-    "4. **After submission**, you'll receive a verification quiz based on YOUR results\n",
-    "5. **Run all cells** before submitting (Kernel → Restart & Run All)\n",
-    "\n",
-    "---"
+    "# Exam Score Prediction"
    ]
   },
   {
@@ -57,13 +40,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 1: Dataset Selection and Loading\n",
-    "\n",
-    "**Requirements:**\n",
-    "- ≥500 samples\n",
-    "- ≥5 features\n",
-    "- Public dataset (UCI/Kaggle)\n",
-    "- Regression OR Classification problem"
+    "## Dataset Selection and Loading\n",
+    "\n"
    ]
   },
   {
@@ -127,13 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 2: Data Preprocessing\n",
-    "\n",
-    "Preprocess your data:\n",
-    "1. Handle missing values\n",
-    "2. Encode categorical variables\n",
-    "3. Split into train/test sets\n",
-    "4. Scale features"
+    "##  Data Preprocessing\n",
+    "\n"
    ]
   },
   {
@@ -201,19 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 3: Baseline Model Implementation\n",
-    "\n",
-    "Implement from scratch (NO sklearn models!):\n",
-    "- Linear Regression (for regression)\n",
-    "- Logistic Regression (for binary classification)\n",
-    "- Softmax Regression (for multiclass classification)\n",
-    "\n",
-    "**Must include:**\n",
-    "- Forward pass (prediction)\n",
-    "- Loss computation\n",
-    "- Gradient computation\n",
-    "- Gradient descent loop\n",
-    "- Loss tracking"
+    "## Baseline Model Implementation\n"
    ]
   },
   {
@@ -317,15 +278,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 4: Multi-Layer Perceptron Implementation\n",
-    "\n",
-    "Implement MLP from scratch with:\n",
-    "- At least 1 hidden layer\n",
-    "- ReLU activation for hidden layers\n",
-    "- Appropriate output activation\n",
-    "- Forward propagation\n",
-    "- Backward propagation\n",
-    "- Gradient descent"
+    "##  Multi-Layer Perceptron Implementation\n",
+    "\n"
    ]
   },
   {
@@ -572,9 +526,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 5: Evaluation and Metrics\n",
-    "\n",
-    "Calculate appropriate metrics for your problem type"
+    "##  Evaluation and Metrics\n",
+    "\n"
    ]
   },
   {
@@ -614,12 +567,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 6: Visualization\n",
-    "\n",
-    "Create visualizations:\n",
-    "1. Training loss curves\n",
-    "2. Performance comparison\n",
-    "3. Additional domain-specific plots"
+    "##  Visualization\n",
+    "\n"
    ]
   },
   {
@@ -670,9 +619,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 7: Analysis and Discussion\n",
-    "\n",
-    "Write your analysis (minimum 200 words)"
+    "## Analysis and Discussion\n",
+    "\n"
    ]
   },
   {
@@ -721,14 +669,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "---\n",
     "\n",
-    "## ⭐ REQUIRED: Structured Output Function\n",
-    "\n",
-    "### **DO NOT MODIFY THE STRUCTURE BELOW**\n",
-    "\n",
-    "This function will be called by the auto-grader. Fill in all values accurately based on your actual results."
+    "## Structured Output Function\n"
    ]
   },
   {
@@ -837,9 +779,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test Your Output\n",
-    "\n",
-    "Run this cell to verify your results dictionary is complete and properly formatted."
+    "## Testing Output\n",
+    "\n"
    ]
   },
   {
@@ -978,40 +919,6 @@
     "except Exception as e:\n",
     "    print(f\"❌ Error in get_assignment_results(): {str(e)}\")\n",
     "    print(\"\\nPlease fix the errors above before submitting.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## 📤 Before Submitting - Final Checklist\n",
-    "\n",
-    "- [ ] **All TODO sections completed**\n",
-    "- [ ] **Both models implemented from scratch** (no sklearn models!)\n",
-    "- [ ] **get_assignment_results() function filled accurately**\n",
-    "- [ ] **Loss decreases for both models**\n",
-    "- [ ] **Analysis ≥ 200 words**\n",
-    "- [ ] **All cells run without errors** (Restart & Run All)\n",
-    "- [ ] **Visualizations created**\n",
-    "- [ ] **File renamed correctly**: YourStudentID_assignment.ipynb\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## ⏭️ What Happens Next\n",
-    "\n",
-    "After submission:\n",
-    "1. ✅ Your notebook will be **auto-graded** (executes automatically)\n",
-    "2. ✅ You'll receive a **verification quiz** (10 questions, 5 minutes)\n",
-    "3. ✅ Quiz questions based on **YOUR specific results**\n",
-    "4. ✅ Final score released after quiz validation\n",
-    "\n",
-    "**The verification quiz ensures you actually ran your code!**\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Good luck! 🚀**"
    ]
   }
  ],
